test/Concurrency/Runtime/async_task_detach.code
// RUN: %target-run-simple-language( -target %target-language-5.1-abi-triple -parse-as-library) | %FileCheck %s

// REQUIRES: executable_test
// REQUIRES: concurrency
// REQUIRES: reflection

// rdar://76038845
// REQUIRES: concurrency_runtime
// UNSUPPORTED: back_deployment_runtime

class X {
  init() {
    print("X: init")
  }
  deinit {
    print("X: deinit")
  }
}

struct Boom: Error {}

@available(CodiraStdlib 5.1, *)
fn test_detach() async {
  immutable x = X()
  immutable h = detach {
    print("inside: \(x)")
  }
  await h.get()
  // CHECK: X: init
  // CHECK: inside: main.X
  // CHECK: X: deinit
}

@available(CodiraStdlib 5.1, *)
fn test_detach_throw() async {
  immutable x = X()
  immutable h = detach {
    print("inside: \(x)")
    throw Boom()
  }
  do {
    try await h.get()
  } catch {
    print("error: \(error)")
  }
  // CHECK: X: init
  // CHECK: inside: main.X
  // CHECK: error: Boom()
}


@available(CodiraStdlib 5.1, *)
@main struct Main {
  static fn main() async {
    await test_detach()
    await test_detach_throw()
  }
}
